# RemoteCollections

./: CMakeLists.txt  HttpDaemon.cpp  HttpDaemon.h  HttpService.cpp  HttpService.h  QueryHandler.cpp  QueryHandler.h  QuerySender.cpp  QuerySender.h  README  RemoteCollection.cpp  RemoteCollection.h  RemoteCollectionMeta.cpp  RemoteCollectionMeta.h  RemoteCollectionQueryMaker.cpp  RemoteCollectionQueryMaker.h  RemoteCollectionService.cpp  RemoteCollectionService.h  amarok_service_remotecollection.desktop
images/: CMakeLists.txt
